--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node.js RESTful API for queue model",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "keywords": [
@@ -22,5 +22,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.1.3"
   }
 }
